--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       rel="stylesheet"
     />
 
+    <link rel="shortcut icon" href="./img/Custom-Icon-Design-Flatastic-11-Cash.ico" type="image/x-icon">
+
     <title>Dev.finance$</title>
   </head>
   <body>
